--- a/style/main.css
+++ b/style/main.css
@@ -78,3 +78,11 @@ header nav :hover{
 .botao i{
     margin-right: 8px;
 }
+
+.container{
+    margin-left: 20px;
+}
+
+.filme-principal .container{
+    width: 70%;
+}
