--- a/style/main.css
+++ b/style/main.css
@@ -10,7 +10,7 @@
 /*Elementos base*/
 body{
     background: var(--preta);
-    font-family: 'Times New Roman', Times, serif;
+    font-family: 'arial', Times, serif;
     color: white;
 }
 
@@ -77,6 +77,7 @@ header nav :hover{
 }
 .botao i{
     margin-right: 8px;
+    
 }
 
 .container{
@@ -92,4 +93,7 @@ header nav :hover{
     width: 100%;
     display: block;
 
+}
+.carrosel-filmes{
+    margin-top: 5px;
 }
