Implementando a funcionalidade do botão mais informações

--- a/style/main.css
+++ b/style/main.css
@@ -2,11 +2,11 @@
     --vermeho: #E50914;
     --preta: #141414;
     }
-*{
-    ​margin:0;
-    ​padding: 0;
-    ​box-sizing: border-box;
-}
+    *{
+        ​margin:0;
+        ​padding: 0;
+        ​box-sizing: border-box;
+    }
 /*Elementos base*/
 body{
     background: var(--preta);
@@ -60,6 +60,7 @@ header nav :hover{
     font-family: 'Trebuchet MS', Arial, sans-serif;
 }
 
+
 .botao {
     background-color:rgba(0,0,0,.50);
     border: none;
@@ -78,10 +79,7 @@ header nav :hover{
     background-color: white;
     color: black;
 }
-.botao i{
-    margin-right: 8px;
-    
-}
+
 a:link{
     text-decoration: none;
    }
@@ -89,7 +87,7 @@ a:link{
       color: white;
   }
 
-.container{
+  .container{
     margin-left: 20px;
 }
 
@@ -105,4 +103,14 @@ a:link{
 }
 .carrosel-filmes{
     margin-top: 5px;
+}
+
+/* Formatando informações */
+/*Ocultar informações*/
+#infoView{ 
+    display:none;
+}
+/*Ocultar boatão menos informações*/
+ .menosInfo{ 
+    display:none;
 }
